@@ -1,12 +1,12 @@
-#!/bin/bash
-# Copyright 2022 Crown Copyright
-# 
+#!/usr/bin/env bash
+# Copyright 2022-2024 Crown Copyright
+#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #     http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,6 +14,9 @@
 # limitations under the License.
 
 set -e
+unset CDPATH
 
-BASE_DIR=$(cd $(dirname $0) && cd "../../" && pwd)
-java -cp ${BASE_DIR}/scripts/jars/clients-*-utility.jar sleeper.status.report.FilesStatusReport "$@"
+SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd "../" && pwd)
+java -cp "${SCRIPTS_DIR}"/jars/clients-*-utility.jar \
+  --add-opens java.base/java.nio=ALL-UNNAMED \
+  sleeper.clients.status.report.FilesStatusReport "$@"
